# rust-sos

./: Cargo.toml  Readme.md  qemu.sh
sos/: Cargo.toml
sos/.cargo/: config.toml
sos/src/: global_descriptor_table.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
sos/src/collections/: hash_map.rs  linked.rs  mod.rs
sos/src/interrupt/: mod.rs  table.rs
sos/src/memory/: allocator.rs  frame_allocator.rs  mod.rs  page_table.rs
sos/src/memory/allocator/: bootstrap_allocator.rs  bump_allocator.rs  fixed_size_allocator.rs  mod.rs  page_allocator.rs  resource_allocator.rs
sos/tests/: should_panic.rs
src/: pic8259.rs  serial.rs
src/interrupt/: exception.rs  mod.rs
src/keyboard/: dvorak.rs  keys.rs  mod.rs
src/memory/: page_table.rs
src/memory/allocator/: big_region_allocator.rs  fixed_size_allocator.rs  meta_allocator.rs  resource_allocator.rs
tests/: basic_boot.rs
